# appsearch

./: Cargo.toml  LICENSE  README.md  build.rs  installer.iss
src/: color.rs  config.rs  converter.rs  currency.rs  date.rs  history.rs  hotkey.rs  launcher.rs  main.rs  math.rs  scraper.rs  searcher.rs  system.rs  timer.rs  tray.rs  updater.rs
