[package]
name = "appsearch"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.8"
global-hotkey = "0.6"
windows = { version = "0.60", features = ["Win32_UI_WindowsAndMessaging", "Win32_System_Com", "Win32_UI_Shell", "Win32_Foundation", "Win32_Storage_FileSystem", "Win32_Graphics_Gdi", "Win32_Media_Audio", "Win32_Media_Audio_Endpoints", "Win32_System_Wmi", "Win32_System_Power", "Win32_System_LibraryLoader"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fuzzy-matcher = "0.3"
open = "5.3"
walkdir = "2.5"
anyhow = "1.0"
directories = "6.0"
regex = "1.10"
meval = "0.2"
chrono = "0.4"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
tray-icon = "0.19"
image = "0.25"

[build-dependencies]
slint-build = "1.8"
winres = "0.1"
